fixing subforum coloration on 'unread' on mobile

--- a/theme/tn.css
+++ b/theme/tn.css
@@ -1,6 +1,6 @@
 /*!
  * Bootstrap v3.1.1 (http://getbootstrap.com)
- * Copyright 2011-2014 Twitter, Inc.
+ * Copyright 2011-2015 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
 
@@ -2171,7 +2171,8 @@ li.header dd {
 .notice {
   border-top-color: #ccc;
 }
-.unread {
+.unread,
+.dropdown-menu > li > a.unread {
   color: #af2331;
 }
 dl.codebox {
